# otus-00

./: CMakeLists.txt  README.md  test_version.cpp
.github/workflows/: release.yml
